k8s/services/paperless-ngx/app/risson/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - paper.risson.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: paperless-ngx
          port: 80
