k8s/services/paperless-ngx/app/risson/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: paper.risson.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-ngx
                port:
                  name: http
  tls:
    - hosts:
        - paper.risson.space
      secretName: paperless-ngx-tls
